# DonwloadManager

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  tasks.md
build-debug/: CMakePresets.json  conanbuild.sh  conanbuildenv-debug-x86_64.sh  conanrun.sh  conanrunenv-debug-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
include/: checksum.hpp  config.hpp  http_client.hpp
openspec/: project.md
openspec/changes/implement-multithreaded-download-manager/: design.md  proposal.md  tasks.md
openspec/changes/implement-multithreaded-download-manager/specs/bandwidth-control/: spec.md  spec.md.bak
openspec/changes/implement-multithreaded-download-manager/specs/concurrency/: spec.md  spec.md.bak
openspec/changes/implement-multithreaded-download-manager/specs/core-download/: spec.md  spec.md.bak
openspec/changes/implement-multithreaded-download-manager/specs/notifications/: spec.md  spec.md.bak
openspec/changes/implement-multithreaded-download-manager/specs/state-management/: spec.md  spec.md.bak
openspec/changes/implement-multithreaded-download-manager/specs/terminal-ui/: spec.md  spec.md.bak
src/: checksum.cpp  http_client.cpp  main.cpp
tests/: test_checksum.cpp
